syntax = "proto3";

package station;

option go_package = "./proto";

service StationService {
  rpc CheckStationAvailability (StationRequest) returns (StationResponse);
}

message StationRequest {
  string station_id = 1;
}

message StationResponse {
  bool available = 1;
  string message = 2;
}
